# thesis_demo

./: .gitignore  README.md  myCode.py  notebook.ipynb
OpenGLRender/: .gitignore  fragment.glsl  render.py  setup.py  vertex.glsl
OpenGLRender/OpenGLRender/: OpenGLRender.py  fragment.glsl  vertex.glsl
OpenGLRender/tests/: check.py  pyOpenGL_test.py  pyOpenGL_test_2.py
ParseObj/: setup.py
ParseObj/ParseObj/: __init__.py  parse_obj.cpp
parse-obj-bindings/: CMakeLists.txt  setup.py
parse-obj-bindings/parse_obj/: CMakeLists.txt  __init__.py
parse-obj-bindings/parse_obj/_core/: OBJ_Loader.h  cpp_library.cpp
parse-obj-bindings/tests/: parse_obj_test.py
parse-urdf-bindings/: CMakeLists.txt  setup.py
parse-urdf-bindings/parse_urdf/: CMakeLists.txt  __init__.py
parse-urdf-bindings/parse_urdf/_core/: cpp_library.cpp
parse-urdf-bindings/tests/: parse_urdf_test.py
tests/: fragment.glsl  moderngl_test.py  pyOpenGL_test.py  vertex.glsl  vertex_old.glsl
